--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "wagmi": "^2.19.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^18",
